--- a/paper.tex
+++ b/paper.tex
@@ -25,6 +25,40 @@
 	The Abstract
 \end{abstract}
 
+\section{Story}
+\begin{itemize}
+\item Motivation
+\begin{itemize}
+\item heat is critical for humans
+\item particular problems for risk groups (illness, old, etc)
+\item walking to areas often done action in particular to typical locations (shopping, health care, etc)
+\item those actions have to be done   
+\end{itemize}
+\item Problem definition
+\begin{itemize}
+\item how to minimize the impact of heat stress on walking paths?
+\itmem subdivided into:
+\begin{itemize}
+\item for a given route?
+\item When and how to walk typical routes, e.g. pharmacy, doctor
+\end{itemize} 
+\end{itemize}
+\item method:
+\begin{itemize}
+\item Goal of this paper: We want to provide a routing method to minimize the heat stress of typical walking actions
+\item We do so by providing a value function for heat stress which can be used in route planning
+\end{itemize}
+\item Evaluation:
+\begin{itemize}
+\item Our data set
+\item Evaluation 1 on routes given date in time.  (pure routing approach) and its metrics
+\item Evaluation 2: producing queries for typical walking tasks (our selection) and their evaluation
+\item implementation as a demonstrator is produced and available at $homepage$
+\end{itemize}
+\item Conclusion and contribution
+\end{itemize}
+
+
 \input{introduction}
 
 \printbibliography
