initial version of the abstract (see #3)

--- a/paper.tex
+++ b/paper.tex
@@ -22,7 +22,11 @@
 \maketitle
 
 \begin{abstract}
-	The Abstract
+	Heat stress is a serious risk, in particular for certain groups like elderly or patients with multiple sclerosis or heart disease. Certain developments like the ageing of society, the increasing urbanisation (urban heat island effect) and the climate change are increasing the risk that people are effect by heat stress. 
+	
+	Therefore we are presenting to approaches that can help people to reduce the risk of heat stress in their everyday life, e.g. when there go shopping in a supermarket or pharmacy. Our first approach is a tool that helps to find a route with a minimal heat exposure. The second approach we're proposing is a tool that supports the user to select the point in time, with a minimal risk of heat stress, considering e.g. the opening hours of a shop.
+	
+	Our results are showing that both approaches are able to reduce the heat exposure and therefore can help people to decrease the risk of heat stress in their everyday life.
 \end{abstract}
 
 \section{Story}
@@ -37,7 +41,7 @@
 \item Problem definition
 \begin{itemize}
 \item how to minimize the impact of heat stress on walking paths?
-\itmem subdivided into:
+\item subdivided into:
 \begin{itemize}
 \item for a given route?
 \item When and how to walk typical routes, e.g. pharmacy, doctor
