--- a/paper.tex
+++ b/paper.tex
@@ -22,9 +22,9 @@
 \maketitle
 
 \begin{abstract}
-	Heat stress is a serious risk, in particular for certain groups like elderly or patients with multiple sclerosis or heart disease. Certain developments like the ageing of society, the increasing urbanisation (urban heat island effect) and the climate change are increasing the risk that people are effect by heat stress. 
+	Heat stress is a serious risk, in particular for certain groups like elderly or patients with multiple sclerosis or heart disease. Developments like the ageing of society, the increasing urbanisation (urban heat island effect) and the climate change are increasing the risk that people are affected by heat stress. One way to reduce those risks is to adapt the everyday behaviour, e.g. by performing purchases in the supermarket or pharmacy in the morning or evening when temperatures are lower. 
 	
-	Therefore we are presenting to approaches that can help people to reduce the risk of heat stress in their everyday life, e.g. when there go shopping in a supermarket or pharmacy. Our first approach is a tool that helps to find a route with a minimal heat exposure. The second approach we're proposing is a tool that supports the user to select the point in time, with a minimal risk of heat stress, considering e.g. the opening hours of a shop.
+	Therefore we are presenting two different approaches for decision support tools that can help people to adapt their everyday behaviour. At first we're presenting a route planer for pedestrians that can find a route with minimal heat exposure. The second approach we're proposing is a tool that supports the user to select the point in time with a minimal risk of heat stress, considering e.g. the opening hours of a shop. In both cases we are utilizing, among other, remote sensing data of a thermal flight scanner. 
 	
 	Our results are showing that both approaches are able to reduce the heat exposure and therefore can help people to decrease the risk of heat stress in their everyday life.
 \end{abstract}
