Initial version of the introduction (see #2)

--- a/literature.bib
+++ b/literature.bib
@@ -1,16 +1,342 @@
+% Encoding: UTF-8
+
+@InProceedings{Broede2009,
+  author =    {Peter Bröde and Dusan Fiala and Krzysztof Blazejczyk and Yoram Epstein and Ingvar Holmér and Gerd Jendritzky and Bernhard Kampmann and Mark Richards and Hannu Rintamäki and Avraham Shitzer and George Havenith},
+  title =     {Calculating UTCI Equivalent Temperature},
+  booktitle = {Proceedings of the 13th International Conference on Environmental Ergonomics (Boston, USA)},
+  year =      {2009},
+  editor =    {John W. Castellani and Thomas L. Endrusick},
+  pages =     {49-53},
+  publisher = {University of Wollongong, Australia},
+  crossref =  {Castellani2009},
+  url =       {http://www.lboro.ac.uk/microsites/lds/EEC/ICEE/textsearch/09proceedings/ICEE13-Proceedings.pdf},
+  urldate =   {2017-01-18}
+}
+
+@Article{Basu2009,
+  author =     {Basu, Rupa},
+  title =      {High ambient temperature and mortality: a review of epidemiologic studies from 2001 to 2008},
+  journal =    {Environmental Health},
+  year =       {2009},
+  volume =     {8},
+  pages =      {40},
+  doi =        {10.1186/1476-069X-8-40},
+  shorttitle = {High ambient temperature and mortality}
+}
+
+@InProceedings{Dang2012,
+  author =     {Dang, Congwei and Iwai, Masayuki and Umeda, Kazunori and Tobe, Yoshito and Sezaki, Kaoru},
+  title =      {{NaviComf}: Navigate pedestrians for comfort using multi-modal environmental sensors},
+  booktitle =  {2012 {IEEE} International Conference on Pervasive Computing and Communications ({PerCom})},
+  year =       {2012},
+  pages =      {76--84},
+  doi =        {10.1109/PerCom.2012.6199852},
+  eventtitle = {2012 {IEEE} International Conference on Pervasive Computing and Communications ({PerCom})},
+  shorttitle = {{NaviComf}}
+}
+
+@Article{Dang2013,
+  author =       {Dang, Congwei and Iwai, Masayuki and Tobe, Yoshito and Umeda, Kazunori and Sezaki, Kaoru},
+  title =        {A framework for pedestrian comfort navigation using multi-modal environmental sensors},
+  journal =      {Pervasive and Mobile Computing},
+  year =         {2013},
+  volume =       {9},
+  number =       {3},
+  pages =        {421--436},
+  doi =          {10.1016/j.pmcj.2013.01.002},
+  journaltitle = {Pervasive and Mobile Computing},
+  series =       {Special Issue: Selected Papers from the 2012 {IEEE} International Conference on Pervasive Computing and Communications ({PerCom} 2012)},
+  shortjournal = {Pervasive and Mobile Computing}
+}
+
+@Article{Davis2010,
+  author       = {Davis, Scott L. and Wilson, Thad E. and White, Andrea T. and Frohman, Elliot M.},
+  title        = {Thermoregulation in multiple sclerosis},
+  journal      = {Journal of Applied Physiology},
+  year         = {2010},
+  volume       = {109},
+  number       = {5},
+  pages        = {1531--1537},
+  doi          = {10.1152/japplphysiol.00460.2010},
+  journaltitle = {Journal of Applied Physiology},
+  langid       = {english},
+}
+
+@InCollection{Delling2009,
+  author =    {Delling, Daniel and Sanders, Peter and Schultes, Dominik and Wagner, Dorothea},
+  title =     {Engineering Route Planning Algorithms},
+  booktitle = {Algorithmics of Large and Complex Networks},
+  publisher = {Springer Berlin Heidelberg},
+  year =      {2009},
+  editor =    {Lerner, Jürgen and Wagner, Dorothea and Zweig, Katharina A.},
+  number =    {5515},
+  series =    {Lecture Notes in Computer Science},
+  pages =     {117--139},
+  doi =       {10.1007/978-3-642-02094-0_7},
+  langid =    {english}
+}
+
 @Article{Dijkstra1959,
   author =       {Dijkstra, E. W.},
   title =        {A note on two problems in connexion with graphs},
+  journal =      {Numerische Mathematik},
+  year =         {1959},
   volume =       {1},
   number =       {1},
   pages =        {269--271},
-  date =         {1959-12},
   doi =          {10.1007/BF01386390},
-  issn =         {0029-599X, 0945-3245},
   journaltitle = {Numerische Mathematik},
-  keywords =     {Appl.Mathematics/Computational Methods of Engineering, Mathematical and Computational Physics, Mathematical Methods in Physics, Mathematics, general, Numerical Analysis, Numerical and Computational Methods},
   langid =       {english},
-  shortjournal = {Numer. Math.},
-  url =          {http://link.springer.com/article/10.1007/BF01386390},
-  urldate =      {2016-04-07}
+  shortjournal = {Numer. Math.}
 }
+
+@Article{Ebi2004,
+  author  = {Ebi, Kristie L. and Teisberg, Thomas J. and Kalkstein, Laurence S. and Robinson, Lawrence and Weiher, Rodney F.},
+  title   = {Heat {Watch}/{Warning} {Systems} {Save} {Lives}: {Estimated} {Costs} and {Benefits} for {Philadelphia} 1995--98},
+  journal = {Bulletin of the American Meteorological Society},
+  year    = {2004},
+  volume  = {85},
+  number  = {8},
+  pages   = {1067--1073},
+  doi     = {10.1175/BAMS-85-8-1067},
+}
+
+@Article{Fanger1973,
+  author =       {Fanger, P. O.},
+  title =        {Assessment of man's thermal comfort in practice},
+  journal =      {British Journal of Industrial Medicine},
+  year =         {1973},
+  volume =       {30},
+  number =       {4},
+  pages =        {313--324},
+  doi =          {10.1136/oem.30.4.313},
+  journaltitle = {British Journal of Industrial Medicine},
+  langid =       {english},
+  shortjournal = {Br J Ind Med}
+}
+
+@Article{Guthrie1995,
+  author =       {Guthrie, Thomas C. and Nelson, Dewey A.},
+  title =        {Influence of temperature changes on multiple sclerosis: critical review of mechanisms and research potential},
+  journal =      {Journal of the Neurological Sciences},
+  year =         {1995},
+  volume =       {129},
+  number =       {1},
+  pages =        {1--8},
+  doi =          {10.1016/0022-510X(94)00248-M},
+  journaltitle = {Journal of the Neurological Sciences},
+  shorttitle =   {Influence of temperature changes on multiple sclerosis}
+}
+
+@PhdThesis{Hasenfratz2015,
+  author =  {Hasenfratz, David},
+  title =   {Enabling Large-Scale Urban Air Quality Monitoring with Mobile Sensor Nodes},
+  school =  {ETH-Zürich},
+  year =    {2015},
+  type =    {PhD thesis},
+  address = {Zürich},
+  doi =     {10.3929/ethz-a-010361120}
+}
+
+@Article{Huang2014,
+  author =       {Huang, Haosheng and Klettner, Silvia and Schmidt, Manuela and Gartner, Georg and Leitinger, Sven and Wagner, Andreas and Steinmann, Renate},
+  title =        {{AffectRoute} – considering people’s affective responses to environments for enhancing route-planning services},
+  journal =      {International Journal of Geographical Information Science},
+  year =         {2014},
+  volume =       {28},
+  number =       {12},
+  pages =        {2456--2473},
+  doi =          {10.1080/13658816.2014.931585},
+  journaltitle = {International Journal of Geographical Information Science}
+}
+
+@TechReport{Huebler2007,
+  author      = {Michael Hübler and Gernot Klepper and Sonja Peterson},
+  title       = {Costs of Climate Change: The Effects of Rising Temperatures on Health and Productivity in Germany},
+  institution = {Kiel Institute for the World Economy},
+  year        = {2007},
+  type        = {Kiel Working Paper},
+  number      = {1321},
+  address     = {Kiel},
+  url         = {https://www.ifw-members.ifw-kiel.de/publications/costs-of-climate-change-the-effects-of-rising-temperatures-on-health-and-productivity-1/Costs%20of%20Climate%20Change%2009-2007.pdf},
+  urldate     = {2017-01-14},
+}
+
+@Conference{Jendritzky2000,
+  author =    {G. Jendritzky and H. Staiger and K. Bucher and A. Graetz and G. Laschewski},
+  title =     {The Perceived Temperature: The Method of the Deutscher Wetterdienst for the Assessment of Cold Stress and Heat Load for the Human Body},
+  booktitle = {Internet Workshop on Windchill, April 3-7, 2000, Meteorological Service of Canada},
+  year =      {2000},
+  url =       {http://www.utci.org/isb/documents/perceived_temperature.pdf},
+  urldate =   {2017-01-18}
+}
+
+@InProceedings{Jendritzky2010,
+  author =    {Gerd Jendritzky and Peter Bröde and Dusan Fiala and George Havenith and Philipp Weihs and Ekaterina Batchvarova and Richard DeDear},
+  title =     {The Universal Thermal Climate Index UTCI},
+  booktitle = {Proceedings of the 7th Conference on Biometeorology, Freiburg, Germany, April 12-14th, 2010},
+  year =      {2010},
+  editor =    {Andreas Matzarakis and Helmut Mayer and Frank-M. Chmielewski},
+  volume =    {20},
+  series =    {Berichte des Meteorologischen Instituts der Albert-Ludwigs-Universität Freiburg},
+  pages =     {184-188},
+  address =   {Freibug},
+  url =       {http://www.mif.uni-freiburg.de/biomet/bm7/report20.pdf},
+  urldate =   {2017-01-18}
+}
+
+@Article{Johnson2005,
+  author    = {Johnson, Helen and Kovats, R. Sari and McGregor, Glenn and Stedman, John and Gibbs, Mark and Walton, Heather and Cook, Lois and Black, Emily},
+  title     = {The impact of the 2003 heat wave on mortality and hospital admissions in England},
+  journal   = {Health Statistics Quarterly},
+  year      = {2005},
+  number    = {25},
+  pages     = {6--11},
+  publisher = {Her Majesty's Stationery Office (HMSO)},
+  url       = {http://cedadocs.badc.rl.ac.uk/291/1/health_stats.pdf},
+}
+
+@Article{Kovats2004,
+  author     = {Kovats, Sari and Wolf, Tanja and Menne, Bettina},
+  title      = {Heatwave of {August} 2003 in {Europe}: provisional estimates of the impact on mortality},
+  journal    = {Eurosurveillance Weekly},
+  year       = {2004},
+  volume     = {8},
+  number     = {11},
+  pages      = {11},
+  shorttitle = {Heatwave of {August} 2003 in {Europe}},
+  url        = {http://www.eurosurveillance.org/ViewArticle.aspx?ArticleId=2409},
+  urldate    = {2017-01-14},
+}
+
+@Article{Matzarakis1999,
+  author =       {Matzarakis, Andreas and Mayer, H. and Iziomon, M. G.},
+  title =        {Applications of a universal thermal index: physiological equivalent temperature},
+  journal =      {International Journal of Biometeorology},
+  year =         {1999},
+  volume =       {43},
+  number =       {2},
+  pages =        {76--84},
+  doi =          {10.1007/s004840050119},
+  journaltitle = {International Journal of Biometeorology},
+  langid =       {english},
+  shortjournal = {Int J Biometeorol},
+  shorttitle =   {Applications of a universal thermal index}
+}
+
+@InCollection{Prashad2014,
+  author =    {Prashad, Lela},
+  title =     {Urban Heat Island},
+  booktitle = {Encyclopedia of Remote Sensing},
+  publisher = {Springer New York},
+  year =      {2014},
+  editor =    {Njoku, Eni G.},
+  series =    {Encyclopedia of Earth Sciences Series},
+  pages =     {878--881},
+  doi =       {10.1007/978-0-387-36699-9_81},
+  langid =    {english}
+}
+
+@TechReport{Seppaenen2006,
+  author      = {Olli Seppänen and William J. Fisk and Q. H. Lei},
+  title       = {Effect of Temperature on Task Performance in Offfice Environment},
+  institution = {Lawrence Berkeley National Laboratory, University of California},
+  year        = {2006},
+  address     = {Berkeley},
+  url         = {https://indoor.lbl.gov/sites/all/files/lbnl-60946.pdf},
+  urldate     = {2017-01-14},
+}
+
+@InProceedings{Sharker2012,
+  author =    {Sharker, Monir H. and Karimi, Hassan A. and Zgibor, Janice C.},
+  title =     {Health-optimal Routing in Pedestrian Navigation Services},
+  booktitle = {Proceedings of the First {ACM} {SIGSPATIAL} International Workshop on Use of {GIS} in Public Health},
+  year =      {2012},
+  series =    {{HealthGIS} '12},
+  pages =     {1--10},
+  publisher = {{ACM}},
+  doi =       {10.1145/2452516.2452518},
+  location =  {New York, {NY}, {USA}}
+}
+
+@InProceedings{Staiger1997,
+  author =    {H. Staiger and K. Bucher and G. Jendritzky},
+  title =     {Gefühlte Temperatur: Die physiologisch gerechte Bewertung von Wärmebelastung und Kältestreß beim Aufenthalt im Freien mit der Maßzahl Grad Celsius},
+  booktitle = {Annalen der Meteorologie},
+  year =      {1997},
+  volume =    {33},
+  pages =     {100-107},
+  address =   {Offenbach am Main},
+  publisher = {Deutscher Wetterdienst},
+  url =       {http://www.dwd.de/DE/leistungen/pbfb_verlag_annalen/pdf_einzelbaende/33_pdf.pdf?__blob=publicationFile&v=3},
+  urldate =   {2016-06-07}
+}
+
+@Article{Staiger2011,
+  author =       {Staiger, Henning and Laschewski, Gudrun and Grätz, Angelika},
+  title =        {The perceived temperature – a versatile index for the assessment of the human thermal environment. Part A: scientific basics},
+  journal =      {International Journal of Biometeorology},
+  year =         {2011},
+  volume =       {56},
+  number =       {1},
+  pages =        {165--176},
+  date =         {2011-02-19},
+  doi =          {10.1007/s00484-011-0409-6},
+  journaltitle = {International Journal of Biometeorology},
+  langid =       {english},
+  shortjournal = {Int J Biometeorol},
+  shorttitle =   {The perceived temperature – a versatile index for the assessment of the human thermal environment. Part A}
+}
+
+@Article{Steadman1979,
+  author       = {Steadman, R. G.},
+  title        = {The Assessment of Sultriness. Part {I}: A Temperature-Humidity Index Based on Human Physiology and Clothing Science},
+  journal      = {Journal of Applied Meteorology},
+  year         = {1979},
+  volume       = {18},
+  number       = {7},
+  pages        = {861--873},
+  doi          = {10.1175/1520-0450(1979)018<0861:TAOSPI>2.0.CO;2},
+  journaltitle = {Journal of Applied Meteorology},
+  shortjournal = {J. Appl. Meteor.},
+  shorttitle   = {The Assessment of Sultriness. Part I},
+}
+
+@Article{Steadman1979a,
+  author =       {Steadman, R. G.},
+  title =        {The Assessment of Sultriness. Part {II}: Effects of Wind, Extra Radiation and Barometric Pressure on Apparent Temperature},
+  journal =      {Journal of Applied Meteorology},
+  year =         {1979},
+  volume =       {18},
+  number =       {7},
+  pages =        {874--885},
+  doi =          {10.1175/1520-0450(1979)018<0874:TAOSPI>2.0.CO;2},
+  journaltitle = {Journal of Applied Meteorology},
+  shortjournal = {J. Appl. Meteor.},
+  shorttitle =   {The Assessment of Sultriness. Part {II}}
+}
+
+@Book{Stull2011,
+  title =     {Meteorology for Scientists and Engineers},
+  publisher = {University of British Columbia},
+  year =      {2011},
+  author =    {Roland Stull},
+  address =   {Vancouver},
+  edition =   {3},
+  isbn =      {978-0-88865-178-5},
+  url =       {https://www.eoas.ubc.ca/books/Practical_Meteorology/mse3.html},
+  urldate =   {2017-01-18}
+}
+
+@Article{Zacharias2014,
+  author =  {Zacharias, Stefan and Koppe, Christina and Mücke, Hans-Guido},
+  title =   {Influence of {Heat} {Waves} on {Ischemic} {Heart} {Diseases} in {Germany}},
+  journal = {Climate},
+  year =    {2014},
+  volume =  {2},
+  number =  {3},
+  pages =   {133--152},
+  doi =     {10.3390/cli2030133}
+}
+
+@comment{jabref-meta: databaseType:bibtex;}
