--- a/introduction.tex
+++ b/introduction.tex
@@ -1,3 +1,45 @@
+% !TeX encoding = utf8
+% !TeX spellcheck = en_GB
+
 \section{Introduction}
 
-\parencite{Dijkstra1959}
+Heat is one of several natural hazards our society is faced with today. High temperatures cannot only lead to a discomfort, e.g. because of increased sweating, it can also have serious negative effects on the health. 
+
+In numerous studies an increase in both mortality and
+morbidity has been associated with a high ambient temperature \parencite{Zacharias2014,Basu2009}. For example an excess of mortality during the 2003 heat wave in Europe have been reported for several European countries \parencite{Johnson2005,Kovats2004}. 
+
+Certain groups are especially vulnerable to heat stress such as older people or people with health problems like high blood pressure,  heart, kidney, liver or
+metabolic diseases  \parencite{Ebi2004,Huebler2007}. For patients with multiple sclerosis an increased body temperature can lead to a worsening of their symptoms \parencite{Guthrie1995,Davis2010}.
+
+In Addition to discomfort and health problems heat can have other negative impacts, e.g. on the task performance in office environments \parencite{Seppaenen2006}. 
+
+Developments like the ageing of society, the increasing urbanisation and the climate change is making the adaptation to heat stress danger more and more important. For instance due to the tendency that a rising number of people is moving into the cities, the urban heat island effect (UHI) is gaining more importance in the future. Because of the UHI effect an urban area can be  \SIrange{8}{12}{\celsius} warmer than the rural areas \parencite{Prashad2014}. This is caused by the fact, that urban materials such as asphalt, concrete, and bricks are storing the energy from the sun and releasing it later to their surrounding \parencite{Prashad2014}. 
+
+There are several steps that can been taken to reduce the risk of heat stress. For instance urban planning measures like more green areas or construction measures like air conditioning or building insulation. Another important step can be the implementation of a heat warning system that enables authorise, hospitals, or retirement homes to take the appropriate actions in time \parencite{Ebi2004}.
+
+Additionally, by adapting their everyday behaviour everybody can reduce their risk by themselves. For instance, activities should be performed in the morning or evening when the temperatures are lower.
+
+\subsection{Goals}
+
+The goal of our work is to help people adapting their everyday behaviour to reduce their heat stress risk. As a use case were looking at everyday actions like go shopping in a supermarket or pharmacy. Those actions usually cannot simply be omitted because there are necessary to challenge the everyday life. Since more and more people are living in cities and do not necessarily own a car, we are focusing on pedestrians. 
+
+One possibility to reduce the heat stress is to select the appropriate time to go shopping, because usually in the morning and evening the heat exposure is lower than middays. So, it can make sense to select a shop that is further from the starting point but has longer opening hours.   
+
+Another possibility to reduce the heat stress risk is the selection of an appropriate route between the start and the destination. For instance, a longer route with more shadows and green areas can have a lower heat exposure than a shorter route and so that selecting the longer route can reduce the heat stress risk. 
+   
+\subsection{Related Work} 
+
+Several research projects have considered environmental factors for pedestrian routing in the paste. The AffectRoute routing algorithm proposed by \textcite{Huang2014} for instance takes the affective responses to the environment into account, e.g. to find a route that a person considers safer.  \textcite{Sharker2012} are proposing a method to find a health optimal route, considering several environmental factors like complexity of the walking trail (slope etc.) and weather (only “Good”, “Fair” or “Bad”). A method to find a route with a minimal pollution exposure has been proposed by \textcite{Hasenfratz2015} in his PhD thesis.
+
+The NaviComf framework for pedestrian routing proposed by \citeauthor{Dang2012} (\citeyear{Dang2012}, \citeyear{Dang2013}), enables to improve the comfort considering environmental factors varying over time. The proposed framework uses a multi-factor cost model for the evaluation of the route and enables them to consider heterogeneous environmental information from multi-modal sensors like air temperature and humidity. To find a optimal route \textcite{Dang2013} are proposing three different algorithms,  a bounded depth-first search algorithm, an adjustable dynamic planning algorithm and a heuristic particle planning algorithm. As a sample application, the authors implemented a routing app for thermal comfort navigation. The meteorological used for this sample application have been collected using a network of 40 micro-climate sensor nodes which detected air temperature and relative humidity. 
+
+\subsection{Contribution}
+
+In this paper we are making contributions to finding a route with minimal heat stress as well as to find a point in time with a minimal heat exposure. 
+
+To find a route with minimal heat exposure we are using a different approach then \citeauthor{Dang2012} (\citeyear{Dang2012}, \citeyear{Dang2013}). First of all we didn't have data of a mobile sensor network at hand, instead we're used the remote sensing data of thermal scanner flight as well as the data of weather station. Another contribution is the comparison of different thermal comfort measures like air temperature and heat index. A further difference is the application of static routing algorithm instead of dynamic one as used by \citeauthor{Dang2012}.
+
+Another impotent contribution of this paper is the finding of a point in time with a minimal heat exposure. The approach which we are proposing allows to find a place and a point in time within a given search radius with a minimal heat exposure, considering constrains like the opening hours of the feasible places. Thereby we're taking the heat exposure as well as the distance to the respective places in to account.   
+
+
+
