Initial version of the main part: routing (not complete, see #9)

--- a/literature.bib
+++ b/literature.bib
@@ -13,6 +13,18 @@
   urldate =   {2017-01-18}
 }
 
+@Article{Ahn1991,
+  author =       {Ahn, Byong-Hun and Shin, Jae-Yeong},
+  title =        {Vehicle-Routeing with Time Windows and Time-Varying Congestion},
+  journal =      {The Journal of the Operational Research Society},
+  year =         {1991},
+  volume =       {42},
+  number =       {5},
+  pages =        {393--400},
+  doi =          {10.2307/2583752},
+  journaltitle = {The Journal of the Operational Research Society}
+}
+
 @Article{Basu2009,
   author =     {Basu, Rupa},
   title =      {High ambient temperature and mortality: a review of epidemiologic studies from 2001 to 2008},
@@ -88,6 +100,19 @@
   journaltitle = {Numerische Mathematik},
   langid =       {english},
   shortjournal = {Numer. Math.}
+}
+
+@InProceedings{Ding2008,
+  author =    {Ding, Bolin and Yu, Jeffrey Xu and Qin, Lu},
+  title =     {Finding Time-dependent Shortest Paths over Large Graphs},
+  booktitle = {Proceedings of the 11th International Conference on Extending Database Technology: Advances in Database Technology},
+  year =      {2008},
+  series =    {{EDBT} '08},
+  pages =     {205--216},
+  publisher = {{ACM}},
+  doi =       {10.1145/1353343.1353371},
+  isbn =      {978-1-59593-926-5},
+  location =  {New York, {NY}, {USA}}
 }
 
 @Article{Ebi2004,
@@ -196,6 +221,18 @@
   url       = {http://cedadocs.badc.rl.ac.uk/291/1/health_stats.pdf},
 }
 
+@Article{Kaufman1993,
+  author =       {Kaufman, David E. and Smith, Robert L.},
+  title =        {Fastest Paths in Time-Dependent Networks for Intelligent Vehicle-Highway Systems Application},
+  journal =      {I V H S Journal},
+  year =         {1993},
+  volume =       {1},
+  number =       {1},
+  pages =        {1--11},
+  doi =          {10.1080/10248079308903779},
+  journaltitle = {I V H S Journal}
+}
+
 @Article{Kovats2004,
   author     = {Kovats, Sari and Wolf, Tanja and Menne, Bettina},
   title      = {Heatwave of {August} 2003 in {Europe}: provisional estimates of the impact on mortality},
@@ -222,6 +259,32 @@
   langid =       {english},
   shortjournal = {Int J Biometeorol},
   shorttitle =   {Applications of a universal thermal index}
+}
+
+@Article{Orda1990,
+  author =       {Orda, Ariel and Rom, Raphael},
+  title =        {Shortest-path and Minimum-delay Algorithms in Networks with Time-dependent Edge-length},
+  journal =      {Journal of the {ACM}},
+  year =         {1990},
+  volume =       {37},
+  number =       {3},
+  pages =        {607--625},
+  doi =          {10.1145/79147.214078},
+  journaltitle = {Journal of the {ACM}},
+  shortjournal = {J. {ACM}}
+}
+
+@Article{Orda1991,
+  author =       {Orda, Ariel and Rom, Raphael},
+  title =        {Minimum weight paths in time-dependent networks},
+  journal =      {Networks},
+  year =         {1991},
+  volume =       {21},
+  number =       {3},
+  pages =        {295--319},
+  doi =          {10.1002/net.3230210304},
+  journaltitle = {Networks},
+  langid =       {english}
 }
 
 @InCollection{Prashad2014,
