--- a/paper.tex
+++ b/paper.tex
@@ -3,7 +3,8 @@
 % !TeX spellcheck = en_GB
 % !BIB program = biber
 
-\documentclass[a4paper]{scrartcl}
+\documentclass[a4paper,parskip=full]{scrartcl}
+\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{amsmath,amssymb,amsfonts}
@@ -43,7 +44,7 @@
 \end{abstract}
 
 \input{introduction}
-%\input{mainpart}
+\input{mainpart}
 \input{story}
 
 
