--- a/introduction.tex
+++ b/introduction.tex
@@ -44,7 +44,7 @@ Over time different indices that considers a complete human heat budget model ha
 For the examination of the thermal comfort the following meteorological parameters are important: air temperature, vapour pressure,
 wind velocity and mean radiant temperature of the surroundings \parencite{Matzarakis1999}.
 
-Because we only had air temperature and the relative humidity at hand we used \citeauthor{Steadman1979}'s heat index \parencite{Steadman1979} and as a simple comparison measure the air temperature. To compute an approximation of the heat index we used the formula published by \textcite[77]{Stull2011}. 
+Because we only had air temperature and the relative humidity at hand we used \citeauthor{Steadman1979}'s heat index \parencite{Steadman1979} and, as a simple comparison measure, the air temperature. To compute an approximation of the heat index we used the formula published by \textcite[77]{Stull2011}. 
 
 
 \subsection{Contribution}
