--- a/introduction.tex
+++ b/introduction.tex
@@ -6,10 +6,10 @@
 Heat is one of several natural hazards our society is faced with today. High temperatures cannot only lead to a discomfort, e.g. because of increased sweating, it can also have serious negative effects on the health. 
 
 In numerous studies an increase in both mortality and
-morbidity has been associated with a high ambient temperature \parencite{Zacharias2014,Basu2009}. For example an excess of mortality during the 2003 heat wave in Europe have been reported for several European countries \parencite{Johnson2005,Kovats2004}. 
+morbidity has been associated with a high ambient temperature \parencite{Basu2009}. For example an excess of mortality during the 2003 heat wave in Europe have been reported for several European countries \parencite{Kovats2004}. 
 
 Certain groups are especially vulnerable to heat stress such as older people or people with health problems like high blood pressure,  heart, kidney, liver or
-metabolic diseases  \parencite{Ebi2004,Huebler2007}. For patients with multiple sclerosis an increased body temperature can lead to a worsening of their symptoms \parencite{Guthrie1995,Davis2010}.
+metabolic diseases  \parencite{Ebi2004,Huebler2007}. For patients with multiple sclerosis an increased body temperature can lead to a worsening of their symptoms \parencite{Davis2010}.
 
 Developments like the ageing of society, the increasing urbanisation and the climate change is making the adaptation to heat stress danger more and more important. For instance due to the tendency that a rising number of people is moving into the cities, the urban heat island effect (UHI) is gaining more importance in the future. Because of the UHI effect an urban area can be  \SIrange{8}{12}{\celsius} warmer than the rural areas \parencite{Prashad2014}. This is caused by the fact, that urban materials such as asphalt, concrete, and bricks are storing the energy from the sun and releasing it later to their surrounding \parencite{Prashad2014}. 
 
